source/fitsio.d


int ffg3db (
    fitsfile* fptr,
    c_long group,
    ubyte nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    ubyte* array,
    int* anynul,
    int* status);
int ffg3dsb (
    fitsfile* fptr,
    c_long group,
    byte nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    byte* array,
    int* anynul,
    int* status);
int ffg3dui (
    fitsfile* fptr,
    c_long group,
    ushort nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    ushort* array,
    int* anynul,
    int* status);
int ffg3di (
    fitsfile* fptr,
    c_long group,
    short nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    short* array,
    int* anynul,
    int* status);
int ffg3duj (
    fitsfile* fptr,
    c_long group,
    c_ulong nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    c_ulong* array,
    int* anynul,
    int* status);
int ffg3dj (
    fitsfile* fptr,
    c_long group,
    c_long nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    c_long* array,
    int* anynul,
    int* status);
int ffg3dujj (
    fitsfile* fptr,
    c_long group,
    ULONGLONG nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    ULONGLONG* array,
    int* anynul,
    int* status);
int ffg3djj (
    fitsfile* fptr,
    c_long group,
    LONGLONG nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    LONGLONG* array,
    int* anynul,
    int* status);
int ffg3duk (
    fitsfile* fptr,
    c_long group,
    uint nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    uint* array,
    int* anynul,
    int* status);
int ffg3dk (
    fitsfile* fptr,
    c_long group,
    int nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    int* array,
    int* anynul,
    int* status);
int ffg3de (
    fitsfile* fptr,
    c_long group,
    float nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    float* array,
    int* anynul,
    int* status);
int ffg3dd (
    fitsfile* fptr,
    c_long group,
    double nulval,
    LONGLONG ncols,
    LONGLONG nrows,
    LONGLONG naxis1,
    LONGLONG naxis2,
    LONGLONG naxis3,
    double* array,
    int* anynul,
    int* status);

int ffgsvb (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    ubyte nulval,
    ubyte* array,
    int* anynul,
    int* status);
int ffgsvsb (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    byte nulval,
    byte* array,
    int* anynul,
    int* status);
int ffgsvui (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    ushort nulval,
    ushort* array,
    int* anynul,
    int* status);
int ffgsvi (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    short nulval,
    short* array,
    int* anynul,
    int* status);
int ffgsvuj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    c_ulong nulval,
    c_ulong* array,
    int* anynul,
    int* status);
int ffgsvj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    c_long nulval,
    c_long* array,
    int* anynul,
    int* status);
int ffgsvujj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    ULONGLONG nulval,
    ULONGLONG* array,
    int* anynul,
    int* status);
int ffgsvjj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    LONGLONG nulval,
    LONGLONG* array,
    int* anynul,
    int* status);
int ffgsvuk (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    uint nulval,
    uint* array,
    int* anynul,
    int* status);
int ffgsvk (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    int nulval,
    int* array,
    int* anynul,
    int* status);
int ffgsve (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    float nulval,
    float* array,
    int* anynul,
    int* status);
int ffgsvd (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    double nulval,
    double* array,
    int* anynul,
    int* status);

int ffgsfb (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    ubyte* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfsb (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    byte* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfui (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    ushort* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfi (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    short* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfuj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    c_ulong* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    c_long* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfujj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    ULONGLONG* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfjj (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    LONGLONG* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfuk (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    uint* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfk (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    int* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfe (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    float* array,
    char* flagval,
    int* anynul,
    int* status);
int ffgsfd (
    fitsfile* fptr,
    int colnum,
    int naxis,
    c_long* naxes,
    c_long* blc,
    c_long* trc,
    c_long* inc,
    double* array,
    char* flagval,
    int* anynul,
    int* status);

int ffggpb (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    ubyte* array,
    int* status);
int ffggpsb (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    byte* array,
    int* status);
int ffggpui (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    ushort* array,
    int* status);
int ffggpi (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    short* array,
    int* status);
int ffggpuj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    c_ulong* array,
    int* status);
int ffggpj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    c_long* array,
    int* status);
int ffggpujj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    ULONGLONG* array,
    int* status);
int ffggpjj (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    LONGLONG* array,
    int* status);
int ffggpuk (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    uint* array,
    int* status);
int ffggpk (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    int* array,
    int* status);
int ffggpe (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    float* array,
    int* status);
int ffggpd (
    fitsfile* fptr,
    c_long group,
    c_long firstelem,
    c_long nelem,
    double* array,
    int* status);
